Fix header center alignment issue

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -15,13 +15,14 @@ a.navbar-brand {
     width: 56%;
     text-align: right;
     padding-top: 5px;
+    background-color: blue;
 }
 
 #navbarNavDropdown {
-    width: 50%;
-    margin-left: 100px;
+    width: 100%;
     font-size: 1.2rem;
     padding-top: 5px;
+    background-color: red;
 }
 
 #navbarNavDropdown ul li {
